[package]
name = "halley"
version = "0.1.0"
authors = ["Jonas A. Hultén <jonas@sldr.se>"]
repository = "https://github.com/DrSLDR/halley"
homepage = "https://github.com/DrSLDR/halley"
license = "Apache-2.0 OR MIT"
description = "Offsite backup manager using restic"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
directory-hasher = { git = "https://github.com/DrSLDR/directory-hasher" }
anyhow = "1.0"
async-recursion = "1.0.0"
rayon = "1.5"
rusoto_core = "0.48.0"
rusoto_s3 = "0.48.0"
tokio = "1.20"
tracing = "0.1.34"
tracing-subscriber = "0.3.14"

[dev-dependencies]
assert_fs = "1.0"
predicates = "2.1"
